--- a/useRunOnce/package.json
+++ b/useRunOnce/package.json
@@ -1,7 +1,7 @@
 {
   "name": "use-run-once",
   "author": {
-    "name": "Dennis Perssson",
+    "name": "Dennis Persson",
     "email": "dennis@perssondennis.com",
     "url": "https://www.perssondennis.com/"
   },
